fixed footer spacing, fixed page not reload when browser refresh by replacing BrowserRouter to HashRouter

--- a/assets/scss/components/footer/footer.scss
+++ b/assets/scss/components/footer/footer.scss
@@ -2,10 +2,10 @@
   min-height: 100%;
   height: auto !important;
   height: 100%;
-  margin: 0 auto -6vh;
+  margin: 2vh auto -4vh;
   &__nav {
     background: transparent;
-    height: 6vh;
+    height: 4vh;
     display: flex;
     justify-content: center;
     align-items: center;
